statistics : nb of sessions, nb of channels, length of sessions (avg, stderror, median)

--- a/notebooks/raw_data_analysis.ipynb
+++ b/notebooks/raw_data_analysis.ipynb
@@ -3,18 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-10T15:56:56.396711241Z",
-     "start_time": "2023-05-10T15:56:56.326195398Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os.path\n",
     "from os import listdir, path\n",
     "from os.path import isfile, join\n",
     "import datetime\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -26,19 +22,14 @@
     "\n",
     "\n",
     "from pyapnea.oscar.oscar_loader import load_session\n",
-    "from pyapnea.oscar.oscar_getter import event_data_to_dataframe\n",
+    "from pyapnea.oscar.oscar_getter import event_data_to_dataframe, get_channel_from_code\n",
     "from pyapnea.oscar.oscar_constants import CHANNELS, ChannelID"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-10T15:56:56.403094387Z",
-     "start_time": "2023-05-10T15:56:56.370916431Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# init notebook parameters\n",
@@ -49,27 +40,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-10T15:56:56.404797303Z",
-     "start_time": "2023-05-10T15:56:56.396938640Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '/home/julien/Documents/OSCAR_Data-master/Profiles/Julien/ResMed_23221085377/Events'\n",
+    "#data_path = '/home/julien/Documents/OSCAR_Data-master/Profiles/Julien/ResMed_23221085377/Events'\n",
+    "data_path = '/home/julien/Documents/oscar_data/Profiles/Julien/ResMed_23221085377/Events'\n",
     "list_files = [{'label': f, 'value': f} for f in listdir(data_path) if isfile(join(data_path, f))]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-10T15:56:56.405008551Z",
-     "start_time": "2023-05-10T15:56:56.397165991Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def event_data_to_dataframe_all_channel(oscar_session_data):\n",
@@ -111,17 +93,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-05-10T15:56:57.891802671Z",
-     "start_time": "2023-05-10T15:56:56.399959299Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# reading files\n",
     "# number 2 has obstructive events\n",
-    "oscar_session_data = load_session(os.path.join(data_path, list_files[2]['value']))\n",
+    "oscar_session_data = load_session(os.path.join(data_path, list_files[0]['value']))\n",
     "df = event_data_to_dataframe_all_channel(oscar_session_data)\n",
     "\n",
     "# TODO handle Leak two value per time\n",
@@ -153,11 +130,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sns.set(rc={'figure.figsize':(25,15)})\n",
-    "fig, ax = plt.subplots()\n",
-    "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols')\n",
-    "for a in dfm_annotation['local_time']:\n",
-    "    plt.axvline(x=a, color='g', linewidth=3)"
+    "# sns.set(rc={'figure.figsize':(25,15)})\n",
+    "# fig, ax = plt.subplots()\n",
+    "# sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols')\n",
+    "# for a in dfm_annotation['local_time']:\n",
+    "#     plt.axvline(x=a, color='g', linewidth=3)"
    ],
    "metadata": {
     "collapsed": false
@@ -169,14 +146,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.set(rc={'figure.figsize':(25,15)})\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.set_ylim(-40, 50)\n",
-    "ax.set_xlim(datetime.datetime(2022, 6, 17, 21, 16,5), datetime.datetime(2022, 6, 17, 21, 16,30))\n",
-    "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols', ax = ax)\n",
-    "for a in dfm_annotation['local_time']:\n",
-    "    plt.axvline(x=a, color='g', linewidth=3)"
+    "# sns.set(rc={'figure.figsize':(25,15)})\n",
+    "# fig, ax = plt.subplots()\n",
+    "# ax.set_ylim(-40, 50)\n",
+    "# ax.set_xlim(datetime.datetime(2022, 6, 17, 21, 16,5), datetime.datetime(2022, 6, 17, 21, 16,30))\n",
+    "# sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols', ax = ax)\n",
+    "# for a in dfm_annotation['local_time']:\n",
+    "#     plt.axvline(x=a, color='g', linewidth=3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Statistiques\n",
+    "- Nombre of sessions"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "stats = dict()\n",
+    "stats['nb_sessions'] = len(list_files)\n",
+    "stats['sessions'] = []\n",
+    "\n",
+    "#loading all files\n",
+    "with tqdm(total=len(list_files)) as pbar:\n",
+    "    for f in list_files:\n",
+    "        oscar_session_data = load_session(os.path.join(data_path, f['value']))\n",
+    "        # len FlowRate\n",
+    "        flowrate_chanel = get_channel_from_code(oscar_session_data, ChannelID.CPAP_FlowRate.value)\n",
+    "        flowrate_event = flowrate_chanel.events[0]\n",
+    "        stat_session = {'filename': f['label'],\n",
+    "                        'nb channel': len(oscar_session_data.data.channels),\n",
+    "                        'ts1' : flowrate_event.ts1,\n",
+    "                        'ts2' : flowrate_event.ts2,\n",
+    "                        'starting time' : datetime.datetime.fromtimestamp(flowrate_event.ts1/1000.0),\n",
+    "                        'lenght FlowRate (ms)': flowrate_event.ts2 - flowrate_event.ts1,\n",
+    "                        'FlowRate present': (ChannelID.CPAP_FlowRate.value in [c.code for c in oscar_session_data.data.channels])}\n",
+    "        stats['sessions'].append(stat_session)\n",
+    "        pbar.update(1)\n",
+    "        oscar_session_data = None"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def ms_to_hour_min_sec_ms(ms):\n",
+    "    sec, ms = divmod(ms, 1000)\n",
+    "    min, sec = divmod(sec, 60)\n",
+    "    hour, min = divmod(min, 60)\n",
+    "    return hour, min, sec, ms"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import statistics as stat\n",
+    "length_array = np.array([s['lenght FlowRate (ms)'] for s in stats['sessions']])\n",
+    "avg_len = length_array.mean()\n",
+    "med_len = np.median(length_array)\n",
+    "pstdev_len = stat.pstdev(length_array.tolist())\n",
+    "stats['FlowRate average length (ms)'] = avg_len\n",
+    "stats['FlowRate std error length (ms)'] = pstdev_len\n",
+    "stats['FlowRate median (ms)'] = med_len\n",
+    "stats['FlowRate average length (hmsms))'] = ms_to_hour_min_sec_ms(avg_len)\n",
+    "stats['FlowRate std error length (hmsms)'] = ms_to_hour_min_sec_ms(pstdev_len)\n",
+    "stats['FlowRate median (ms)'] = ms_to_hour_min_sec_ms(med_len)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "stats"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sns.boxplot(data=length_array/1000.0/60/60).set(xlabel='Sessions', ylabel='Length (hour)')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
