statistics on events. Using all cpap machines

--- a/notebooks/raw_data_analysis.ipynb
+++ b/notebooks/raw_data_analysis.ipynb
@@ -43,9 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data_path = '/home/julien/Documents/OSCAR_Data-master/Profiles/Julien/ResMed_23221085377/Events'\n",
-    "data_path = '/home/julien/Documents/oscar_data/Profiles/Julien/ResMed_23221085377/Events'\n",
-    "list_files = [{'label': f, 'value': f} for f in listdir(data_path) if isfile(join(data_path, f))]"
+    "data_path_cpap1 = '../data/raw/ResMed_23192565579/Events'\n",
+    "list_files = [{'label': f, 'value': f, 'fullpath': join(data_path_cpap1, f)} for f in listdir(data_path_cpap1) if isfile(join(data_path_cpap1, f))]\n",
+    "data_path_cpap2= '../data/raw/ResMed_23221085377/Events'\n",
+    "list_files.extend([{'label': f, 'value': f, 'fullpath': join(data_path_cpap2, f)} for f in listdir(data_path_cpap2) if isfile(join(data_path_cpap2, f))])\n"
    ]
   },
   {
@@ -91,6 +92,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Displaying one session and the first event"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -98,7 +108,7 @@
    "source": [
     "# reading files\n",
     "# number 2 has obstructive events\n",
-    "oscar_session_data = load_session(os.path.join(data_path, list_files[0]['value']))\n",
+    "oscar_session_data = load_session(list_files[1]['fullpath'])\n",
     "df = event_data_to_dataframe_all_channel(oscar_session_data)\n",
     "\n",
     "# TODO handle Leak two value per time\n",
@@ -130,11 +140,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# sns.set(rc={'figure.figsize':(25,15)})\n",
-    "# fig, ax = plt.subplots()\n",
-    "# sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols')\n",
-    "# for a in dfm_annotation['local_time']:\n",
-    "#     plt.axvline(x=a, color='g', linewidth=3)"
+    "sns.set(rc={'figure.figsize':(25,15)})\n",
+    "fig, ax = plt.subplots()\n",
+    "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols')\n",
+    "for a in dfm_annotation['local_time']:\n",
+    "    plt.axvline(x=a, color='g', linewidth=3)"
    ],
    "metadata": {
     "collapsed": false
@@ -146,20 +156,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sns.set(rc={'figure.figsize':(25,15)})\n",
-    "# fig, ax = plt.subplots()\n",
-    "# ax.set_ylim(-40, 50)\n",
-    "# ax.set_xlim(datetime.datetime(2022, 6, 17, 21, 16,5), datetime.datetime(2022, 6, 17, 21, 16,30))\n",
-    "# sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols', ax = ax)\n",
-    "# for a in dfm_annotation['local_time']:\n",
-    "#     plt.axvline(x=a, color='g', linewidth=3)"
+    "event_time = dfm_annotation['local_time'].iloc[0]\n",
+    "sns.set(rc={'figure.figsize':(25,15)})\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_ylim(-40, 50)\n",
+    "ax.set_xlim(event_time - datetime.timedelta(seconds=25), event_time + datetime.timedelta(seconds=10))\n",
+    "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols', ax = ax)\n",
+    "for a in dfm_annotation['local_time']:\n",
+    "    plt.axvline(x=a, color='g', linewidth=3)"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
     "# Statistiques\n",
-    "- Nombre of sessions"
+    "- Number of sessions\n",
+    "- Lenght of sessions"
    ],
    "metadata": {
     "collapsed": false
@@ -174,13 +186,22 @@
     "stats['nb_sessions'] = len(list_files)\n",
     "stats['sessions'] = []\n",
     "\n",
+    "events_channels = [ChannelID.CPAP_ClearAirway.value,\n",
+    "                   ChannelID.CPAP_Obstructive.value,\n",
+    "                   ChannelID.CPAP_Hypopnea.value,\n",
+    "                   ChannelID.CPAP_Apnea.value, # ClearAway or Obstructive, not determined\n",
+    "                   ]\n",
+    "\n",
+    "df_event_all_sessions = None\n",
+    "\n",
     "#loading all files\n",
     "with tqdm(total=len(list_files)) as pbar:\n",
     "    for f in list_files:\n",
-    "        oscar_session_data = load_session(os.path.join(data_path, f['value']))\n",
-    "        # len FlowRate\n",
+    "        oscar_session_data = load_session(f['fullpath'])\n",
+    "        # FlowRate\n",
     "        flowrate_chanel = get_channel_from_code(oscar_session_data, ChannelID.CPAP_FlowRate.value)\n",
     "        flowrate_event = flowrate_chanel.events[0]\n",
+    "\n",
     "        stat_session = {'filename': f['label'],\n",
     "                        'nb channel': len(oscar_session_data.data.channels),\n",
     "                        'ts1' : flowrate_event.ts1,\n",
@@ -188,9 +209,57 @@
     "                        'starting time' : datetime.datetime.fromtimestamp(flowrate_event.ts1/1000.0),\n",
     "                        'lenght FlowRate (ms)': flowrate_event.ts2 - flowrate_event.ts1,\n",
     "                        'FlowRate present': (ChannelID.CPAP_FlowRate.value in [c.code for c in oscar_session_data.data.channels])}\n",
+    "\n",
+    "        # Events\n",
+    "        stat_session['events'] = []\n",
+    "        for e in events_channels:\n",
+    "            event_name = [c[5] for c in CHANNELS if c[1].value == e][0]\n",
+    "            event_channel_df = event_data_to_dataframe(oscar_session_data, e)\n",
+    "            if not event_channel_df.empty:\n",
+    "                df_event = event_channel_df[~pd.isnull(event_channel_df[event_name])]\n",
+    "                df_event['type']  = event_name\n",
+    "                df_event['session'] = f['value']\n",
+    "            else:\n",
+    "                df_event = pd.DataFrame(data=[[np.NAN, event_name, f['value']]], columns=['time_absolute', 'type', 'session'])\n",
+    "            if df_event_all_sessions is None:\n",
+    "                df_event_all_sessions = df_event[['time_absolute', 'type', 'session']]\n",
+    "            else:\n",
+    "                df_event_all_sessions = pd.concat([df_event_all_sessions,  df_event[['time_absolute', 'type', 'session']]])\n",
     "        stats['sessions'].append(stat_session)\n",
     "        pbar.update(1)\n",
-    "        oscar_session_data = None"
+    "        oscar_session_data = None\n",
+    "\n",
+    "\n",
+    "# All event per session\n",
+    "print(df_event_all_sessions)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# stats for event\n",
+    "# number of event per type\n",
+    "df_count_per_type = df_event_all_sessions.groupby(['type'])['time_absolute'].count().to_frame(name = 'count').reset_index().sort_values('type')\n",
+    "# number of event per type per session\n",
+    "df_count_per_type_per_session = df_event_all_sessions.groupby(['session', 'type'])['time_absolute'].count().to_frame(name = 'count').reset_index().sort_values('type')\n",
+    "print(df_count_per_type)\n",
+    "print(df_count_per_type_per_session)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "stats"
    ],
    "metadata": {
     "collapsed": false
@@ -217,16 +286,22 @@
    "outputs": [],
    "source": [
     "import statistics as stat\n",
+    "# FlowRate\n",
     "length_array = np.array([s['lenght FlowRate (ms)'] for s in stats['sessions']])\n",
     "avg_len = length_array.mean()\n",
     "med_len = np.median(length_array)\n",
     "pstdev_len = stat.pstdev(length_array.tolist())\n",
+    "stddev_len = stat.stdev(length_array.tolist())\n",
     "stats['FlowRate average length (ms)'] = avg_len\n",
     "stats['FlowRate std error length (ms)'] = pstdev_len\n",
+    "stats['FlowRate stddev (ms)'] = stddev_len\n",
     "stats['FlowRate median (ms)'] = med_len\n",
     "stats['FlowRate average length (hmsms))'] = ms_to_hour_min_sec_ms(avg_len)\n",
     "stats['FlowRate std error length (hmsms)'] = ms_to_hour_min_sec_ms(pstdev_len)\n",
-    "stats['FlowRate median (ms)'] = ms_to_hour_min_sec_ms(med_len)"
+    "stats['FlowRate stddev (hmsms)'] = ms_to_hour_min_sec_ms(stddev_len)\n",
+    "stats['FlowRate median (hmsms)'] = ms_to_hour_min_sec_ms(med_len)\n",
+    "\n",
+    "# Events\n"
    ],
    "metadata": {
     "collapsed": false
@@ -244,11 +319,80 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Length"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
     "sns.boxplot(data=length_array/1000.0/60/60).set(xlabel='Sessions', ylabel='Length (hour)')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Events"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# nb event per session (average + stddev)\n",
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
+    "sns.barplot(data=df_count_per_type_per_session, x='type', y='count', errorbar='sd').set(xlabel='type of event', ylabel='Nb events per session (avg+stdev)')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# nb event per session (average + stderr)\n",
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
+    "sns.barplot(data=df_count_per_type_per_session, x='type', y='count', errorbar='se').set(xlabel='type of event', ylabel='Nb events per session (avg+stderr)')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sns.boxplot(data=df_count_per_type_per_session, x='type', y='count')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# nb event per type\n",
+    "sns.set(rc={'figure.figsize':(5,5)})\n",
+    "sns.barplot(data=df_count_per_type, x='type', y='count').set(xlabel='type of event', ylabel='Nb events per type')"
    ],
    "metadata": {
     "collapsed": false
