Analysis of raw data : statistics for events (count, avg/session, stddev/session)

--- a/notebooks/raw_data_analysis.ipynb
+++ b/notebooks/raw_data_analysis.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "import os.path\n",
     "from os import listdir, path\n",
     "from os.path import isfile, join\n",
@@ -93,12 +94,10 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Displaying one session and the first event"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -108,17 +107,16 @@
    "source": [
     "# reading files\n",
     "# number 2 has obstructive events\n",
-    "oscar_session_data = load_session(list_files[1]['fullpath'])\n",
+    "filename_to_load = '../data/raw/ResMed_23192565579/Events/62202198.001'\n",
+    "\n",
+    "oscar_session_data = load_session(filename_to_load)\n",
     "df = event_data_to_dataframe_all_channel(oscar_session_data)\n",
     "\n",
     "# TODO handle Leak two value per time\n",
     "#df_Leak = event_data_to_dataframe(oscar_session_data, ChannelID.CPAP_Leak.value)\n",
     "#np.where(df.index.duplicated(keep=False) == True)\n",
     "\n",
-    "#print(df.describe())\n",
-    "#print(df)\n",
-    "display(df)\n",
-    "\n"
+    "display(df)\n"
    ]
   },
   {
@@ -138,17 +136,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.set(rc={'figure.figsize':(25,15)})\n",
     "fig, ax = plt.subplots()\n",
     "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols')\n",
     "for a in dfm_annotation['local_time']:\n",
-    "    plt.axvline(x=a, color='g', linewidth=3)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "    plt.axvline(x=a, color='b', linewidth=3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -163,15 +159,30 @@
     "ax.set_xlim(event_time - datetime.timedelta(seconds=25), event_time + datetime.timedelta(seconds=10))\n",
     "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols', ax = ax)\n",
     "for a in dfm_annotation['local_time']:\n",
-    "    plt.axvline(x=a, color='g', linewidth=3)"
+    "    plt.axvline(x=a, color='b', linewidth=3)"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Statistiques\n",
     "- Number of sessions\n",
     "- Lenght of sessions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "events_channels = [ChannelID.CPAP_ClearAirway.value,\n",
+    "                   ChannelID.CPAP_Obstructive.value,\n",
+    "                   ChannelID.CPAP_Hypopnea.value,\n",
+    "                   ChannelID.CPAP_Apnea.value, # ClearAway or Obstructive, not determined\n",
+    "                   ]\n",
+    "event_names = [[c[5] for c in CHANNELS if c[1].value == e][0] for e in events_channels]\n",
+    "event_names"
    ],
    "metadata": {
     "collapsed": false
@@ -180,17 +191,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "stats = dict()\n",
     "stats['nb_sessions'] = len(list_files)\n",
     "stats['sessions'] = []\n",
     "\n",
-    "events_channels = [ChannelID.CPAP_ClearAirway.value,\n",
-    "                   ChannelID.CPAP_Obstructive.value,\n",
-    "                   ChannelID.CPAP_Hypopnea.value,\n",
-    "                   ChannelID.CPAP_Apnea.value, # ClearAway or Obstructive, not determined\n",
-    "                   ]\n",
+    "\n",
     "\n",
     "df_event_all_sessions = None\n",
     "\n",
@@ -232,14 +240,12 @@
     "\n",
     "# All event per session\n",
     "print(df_event_all_sessions)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# stats for event\n",
@@ -249,25 +255,21 @@
     "df_count_per_type_per_session = df_event_all_sessions.groupby(['session', 'type'])['time_absolute'].count().to_frame(name = 'count').reset_index().sort_values('type')\n",
     "print(df_count_per_type)\n",
     "print(df_count_per_type_per_session)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "stats"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ms_to_hour_min_sec_ms(ms):\n",
@@ -275,137 +277,116 @@
     "    min, sec = divmod(sec, 60)\n",
     "    hour, min = divmod(min, 60)\n",
     "    return hour, min, sec, ms"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import statistics as stat\n",
+    "import math\n",
     "# FlowRate\n",
     "length_array = np.array([s['lenght FlowRate (ms)'] for s in stats['sessions']])\n",
     "avg_len = length_array.mean()\n",
     "med_len = np.median(length_array)\n",
-    "pstdev_len = stat.pstdev(length_array.tolist())\n",
     "stddev_len = stat.stdev(length_array.tolist())\n",
     "stats['FlowRate average length (ms)'] = avg_len\n",
-    "stats['FlowRate std error length (ms)'] = pstdev_len\n",
     "stats['FlowRate stddev (ms)'] = stddev_len\n",
     "stats['FlowRate median (ms)'] = med_len\n",
     "stats['FlowRate average length (hmsms))'] = ms_to_hour_min_sec_ms(avg_len)\n",
-    "stats['FlowRate std error length (hmsms)'] = ms_to_hour_min_sec_ms(pstdev_len)\n",
     "stats['FlowRate stddev (hmsms)'] = ms_to_hour_min_sec_ms(stddev_len)\n",
     "stats['FlowRate median (hmsms)'] = ms_to_hour_min_sec_ms(med_len)\n",
     "\n",
-    "# Events\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "# Events\n",
+    "stats['events'] = {'count': pd.Series(df_count_per_type['count'].values,index=df_count_per_type['type']).to_dict()}\n",
+    "stats['events']['average_sess'] = {e: df_count_per_type_per_session[df_count_per_type_per_session['type']==e].mean(numeric_only=True).to_list()[0] for e in event_names}\n",
+    "stats['events']['stddev_sess'] = {e: stat.stdev(df_count_per_type_per_session[df_count_per_type_per_session['type']==e]['count']) for e in event_names}\n",
+    "stats['events']['median'] = {e: stat.median(df_count_per_type_per_session[df_count_per_type_per_session['type']==e]['count']) for e in event_names}"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "stats"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Length"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.set(rc={'figure.figsize':(5,5)})\n",
     "sns.boxplot(data=length_array/1000.0/60/60).set(xlabel='Sessions', ylabel='Length (hour)')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Events"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# nb event per session (average + stddev)\n",
     "sns.set(rc={'figure.figsize':(5,5)})\n",
     "sns.barplot(data=df_count_per_type_per_session, x='type', y='count', errorbar='sd').set(xlabel='type of event', ylabel='Nb events per session (avg+stdev)')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# nb event per session (average + stderr)\n",
     "sns.set(rc={'figure.figsize':(5,5)})\n",
     "sns.barplot(data=df_count_per_type_per_session, x='type', y='count', errorbar='se').set(xlabel='type of event', ylabel='Nb events per session (avg+stderr)')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sns.boxplot(data=df_count_per_type_per_session, x='type', y='count')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# nb event per type\n",
     "sns.set(rc={'figure.figsize':(5,5)})\n",
     "sns.barplot(data=df_count_per_type, x='type', y='count').set(xlabel='type of event', ylabel='Nb events per type')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
