FlowRate display change visual. dvc change url

--- a/notebooks/raw_data_analysis.ipynb
+++ b/notebooks/raw_data_analysis.ipynb
@@ -141,9 +141,12 @@
    "source": [
     "sns.set(rc={'figure.figsize':(25,15)})\n",
     "fig, ax = plt.subplots()\n",
-    "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols')\n",
+    "sns.lineplot(data=dfm[dfm['cols']!='Pressure'],x='local_time', y='vals', hue='cols', palette=['r', 'g'], ax= ax)\n",
+    "ax2 = ax.twinx()\n",
+    "# warning : should not interpolate between points...\n",
+    "sns.lineplot(data=dfm[dfm['cols']=='Pressure'],x='local_time', y='vals', hue='cols', palette=['b'], ax = ax2)\n",
     "for a in dfm_annotation['local_time']:\n",
-    "    plt.axvline(x=a, color='b', linewidth=3)"
+    "    plt.axvline(x=a, color='r', linewidth=3)"
    ]
   },
   {
@@ -155,18 +158,22 @@
     "event_time = dfm_annotation['local_time'].iloc[0]\n",
     "sns.set(rc={'figure.figsize':(25,15)})\n",
     "fig, ax = plt.subplots()\n",
+    "\n",
     "ax.set_ylim(-40, 50)\n",
-    "ax.set_xlim(event_time - datetime.timedelta(seconds=25), event_time + datetime.timedelta(seconds=10))\n",
-    "sns.lineplot(data=dfm,x='local_time', y='vals', hue='cols', ax = ax)\n",
+    "ax.set_xlim(event_time - datetime.timedelta(seconds=30), event_time + datetime.timedelta(seconds=10))\n",
+    "sns.lineplot(data=dfm[dfm['cols']!='Pressure'],x='local_time', y='vals', hue='cols', palette=['r', 'g'], ax = ax)\n",
+    "ax2 = ax.twinx()\n",
+    "# warning : should not interpolate between points...\n",
+    "sns.lineplot(data=dfm[dfm['cols']=='Pressure'],x='local_time', y='vals', hue='cols', palette=['b'], ax = ax2)\n",
     "for a in dfm_annotation['local_time']:\n",
-    "    plt.axvline(x=a, color='b', linewidth=3)"
+    "    plt.axvline(x=a, color='r', linewidth=3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistiques\n",
+    "# Statistics\n",
     "- Number of sessions\n",
     "- Lenght of sessions"
    ]
