testing Kaggle notebooks, Statistical analysis difficult (no fixed seasons). Starting using mne package (specialized for eeg)

--- a/notebooks/kaggle_tutorial_time_series.ipynb
+++ b/notebooks/kaggle_tutorial_time_series.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# adjust the parameters for displayed figures\n",
-    "plt.rcParams.update({'figure.figsize': (25, 10)})"
+    "plt.rcParams.update({'figure.figsize': (30, 10)})"
    ],
    "metadata": {
     "collapsed": false
@@ -80,9 +80,64 @@
    "source": [
     "# decomposition\n",
     "# Period : 4s (approximately) of inspiration-expiration => 4000 ms / 40 ms (freq = 25Hz) = 100\n",
-    "decomposition = sm.tsa.seasonal_decompose(df[\"FlowRate\"].head(2000), period=100)\n",
+    "# Period : 1 min  => 60000 ms / 40 ms (freq = 25Hz) = 1500\n",
+    "period = 100\n",
+    "df_nozero = df.copy()\n",
+    "df_nozero['FlowRate'] = df_nozero['FlowRate'] + 50\n",
+    "decomposition = sm.tsa.seasonal_decompose(df_nozero[\"FlowRate\"].iloc[0:5000], period=period, model='additive')\n",
     "figure = decomposition.plot()\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# LAGS ??\n",
+    "plot_acf(df['FlowRate'], lags = period)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df['FlowRate'].plot.hist(bins=50, alpha=0.5)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X = df['FlowRate'].values\n",
+    "split =  int(len(X) / 2)\n",
+    "X1, X2 = X[0:split], X[split:]\n",
+    "mean0, mean1, mean2 = X.mean(), X1.mean(), X2.mean()\n",
+    "var0, var1, var2 = X.var(), X1.var(), X2.var()\n",
+    "print('mean:')\n",
+    "print('all: %.2f, chunk1: %.2f vs chunk2: %.2f' % (mean0, mean1, mean2))\n",
+    "print('variance:')\n",
+    "print('all: %.2f, chunk1: %.2f vs chunk2: %.2f' % (var0, var1, var2))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "NOTE : Not continuing this notebook. The aims is signal forecasting and it's not interesting for apena event detection (anomaly detection)"
    ],
    "metadata": {
     "collapsed": false
