Time UTC for MNE tutorial and loading all files in MNE structure

--- a/notebooks/kaggle_sleep_apnea_notebook_mne_package.ipynb
+++ b/notebooks/kaggle_sleep_apnea_notebook_mne_package.ipynb
@@ -14,12 +14,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "from datetime import  timezone\n",
+    "\n",
+    "from tqdm.notebook import tqdm\n",
     "import mne\n",
+    "\n",
+    "\n",
     "\n",
     "from pyapnea.oscar.oscar_loader import load_session\n",
     "from pyapnea.oscar.oscar_getter import event_data_to_dataframe, get_channel_from_code\n",
     "from pyapnea.oscar.oscar_constants import CHANNELS, ChannelID"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# all files\n",
+    "data_path_cpap1 = '../data/raw/ResMed_23192565579/Events'\n",
+    "list_files = [{'label': f, 'value': f, 'fullpath': join(data_path_cpap1, f)} for f in listdir(data_path_cpap1) if isfile(join(data_path_cpap1, f))]\n",
+    "data_path_cpap2= '../data/raw/ResMed_23221085377/Events'\n",
+    "list_files.extend([{'label': f, 'value': f, 'fullpath': join(data_path_cpap2, f)} for f in listdir(data_path_cpap2) if isfile(join(data_path_cpap2, f))])\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -45,8 +68,13 @@
     "info = mne.create_info(ch_names=['FlowRate'] * 1 ,\n",
     "                       ch_types=['misc'] * 1,\n",
     "                       sfreq=sfreq)\n",
+    "#print(df['time_utc'].iloc[0].to_pydatetime())\n",
     "raw = mne.io.RawArray(df[['FlowRate']].transpose(), info)\n",
-    "raw.plot(show_scrollbars=False, show_scalebars=False, scalings=dict(misc=50))\n"
+    "d = df['time_utc'].iloc[0].to_pydatetime().astimezone(timezone.utc)\n",
+    "raw.set_meas_date(d)\n",
+    "raw.plot(show_scrollbars=False, show_scalebars=False,\n",
+    "         time_format='clock',\n",
+    "         scalings=dict(misc=50))"
    ]
   },
   {
@@ -54,7 +82,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#loading all files into mne structures\n",
+    "raw_array = []\n",
+    "df_array = []\n",
+    "with tqdm(total=len(list_files)) as pbar:\n",
+    "    for f in list_files:\n",
+    "        oscar_session_data = load_session(f['fullpath'])\n",
+    "        df = event_data_to_dataframe(oscar_session_data, ChannelID.CPAP_FlowRate.value)\n",
+    "        info = mne.create_info(ch_names=['FlowRate'] * 1 ,\n",
+    "                       ch_types=['misc'] * 1,\n",
+    "                       sfreq=sfreq)\n",
+    "        raw = mne.io.RawArray(df[['FlowRate']].transpose(), info, verbose=False)\n",
+    "        d = df['time_utc'].iloc[0].to_pydatetime().astimezone(timezone.utc)\n",
+    "        raw.set_meas_date(d)\n",
+    "        raw_array.append(raw)\n",
+    "        pbar.update(1)\n"
+   ]
   }
  ],
  "metadata": {
